styles.css
body {
    font-size: 1em;
}
div{
    max-width: 400px;
}
.coordinates{

    justify-content: space-around;
}
.errBox{
    color: red;
    border: solid 1px;;
}
.digitBox{
    color: black;
    border: solid 1px;
}
.speedometr{
    width: 400px;
    border: solid 1px;
}
.inputPilotClass{
    border: solid 1px;
    padding: 0.5em;
}
.pilotDataElementClass{
    border: solid 1px;
    display: flex;
    padding: 0.5em;
}
.firstLevelContainer{
    border: solid 1px;
}

.inputButtonClass{
    margin-top: 7px;
    box-shadow: 0 2px grey;
}
.inputButtonClassPressed{
    transform: translateY(0.1em);
    box-shadow: none;
}
.inputButtonLabelClass::after{
    display: none;
}
.inputButtonLabelPressedClass::after{
    content: "\2713";
    margin-left: 0.5em;
    display: inline;
    color: green;
}
.inputElementClass{
    margin: 2px;
}
.headerClass{
    text-align: center;
}
.noDataClass{
    color: red;
}

